-- ircd-hybrid-8.0.3 Release Notes
o) Fixed core on UNDLINE
o) XLINE/KLINE/RESV/DLINE/SQUIT and KILL now have the same default reason
   if a reason hasn't been specified


-- ircd-hybrid-8.0.2 Release Notes
o) Minor updates to the build system
o) Fixed broken --enable-assert configure switch
o) Fixed bug where timed events stopped from working if the system's
   clock is running backwards
o) STATS q|Q now shows how many times a resv{} block has been matched
o) Fixed contributed WEBIRC module
o) IRC operators may now again see server generated nick rejection notices


-- ircd-hybrid-8.0.1 Release Notes
o) Fixed broken CIDR support for CHALLENGE based irc operator logins
o) Fixed class limits not properly applying to oper{} blocks
o) Fixed possible TBURST desynchronization with services
o) Fixed TBURST sending server's name to clients if it's a hidden server


-- ircd-hybrid-8.0.0 Release Notes
o) Fixed an off-by-one with spoofs. Spoofs are now also checked for
   invalid characters
o) Removed general::use_whois_actually configuration directive. This is
   now enabled by default
o) Minor SQUIT handling fixes
o) Fixed bancache not being updated on CHGHOST/CHGIDENT


-- ircd-hybrid-8rc1 Release Notes
o) Removed general::client_flood configuration option and added the
   new 'recvq' configuration directive to class{} blocks.
   The max size of a receive queue can be seen in "STATS Y"
   for each class
o) Allow the '[' and ']' characters in server description


-- ircd-hybrid-8beta3 Release Notes
o) Fixed wrong syntax in several language files
o) Removed &localchannels
o) PRIVMSG to opers@some.server is no longer supported
o) Fixed bug that could lead to topic desynchronization
o) Removed serverhide::disable_hidden configuration option
o) Dropped ircd-hybrid-6 GLINE compatibility mode
o) Removed use_invex, use_except and use_knock configuration options.
   These features are now enabled by default


-- ircd-hybrid-8beta2 Release Notes