@@ -100,7 +100,7 @@ m_userhost(struct Client *client_p, struct Client *source_p,
 }
 
 static struct Message userhost_msgtab = {
-  "USERHOST", 0, 0, 1, 1, MFLG_SLOW, 0,
+  "USERHOST", 0, 0, 2, 1, MFLG_SLOW, 0,
   {m_unregistered, m_userhost, m_userhost, m_ignore, m_userhost, m_ignore}
 };
 
